# POS-Awesome-KSA

./: package-lock.json  package.json  pyproject.toml
posawesome/: hooks.py
posawesome/fixtures/: custom_field.json
posawesome/posawesome/api/: customer.py  m_pesa.py  posapp.py
posawesome/posawesome/doctype/pos_closing_shift/: pos_closing_shift.py
posawesome/posawesome/doctype/pos_offer/: pos_offer.js
posawesome/public/css/: claudionday.bundle.css  posawesome.bundle.css
posawesome/public/js/: posawesome.bundle.js  set_theme.js
posawesome/public/js/posapp/: Home.vue  bus.js  i18n.js  package.json  posapp.js
posawesome/public/js/posapp/components/: Navbar.vue
posawesome/public/js/posapp/components/payments/: Pay.vue
posawesome/public/js/posapp/components/pos/: ClosingDialog.vue  Customer.vue  Drafts.vue  EditCustomer.vue  Invoice.vue  ItemsSelector.vue  Mpesa-Payments.vue  NewAddress.vue  NewCustomer.vue  OpeningDialog.vue  Payments.vue  Pos.vue  PosBundles.vue  PosCoupons.vue  PosOffers.vue  Returns.vue  SalesOrders.vue  UpdateCustomer.vue  Variants.vue
posawesome/public/js/posapp/locales/ar/: pos.json
posawesome/public/js/posapp/locales/en/: pos.json
